# Treehacks25

./: .gitignore  app.py  application.py  data.csv  difference.md  eeg_data.pkl  explore_eeg.py  hello.py  learn.py  main.py  pubsub_toy.py  pyproject.toml  savitsky-golkay-DSP-prelim  savitsky-golkay-DSP-prelim.py  serve.sh  tui_toy.py
TTV/: 11.py  elevenlabsAPI.py  luma.py  lumaAPI.py  old_11.py
app/: bci_client.py  main.py  models.py
app/api/: bit.py  ws_handler.py
app/config/: settings.py
app/keyboard/: constants.py  huffman.json  huffman.py  test_utils.py  textual_toy.py  utils.py
app/services/: __init__.py  bci.py  eleven.py  luma.py
image-gen/: build.sh  main.ts
keyboard/: constants.py  huffman.json  huffman.py  test_utils.py  textual_toy.py  utils.py
other/: saved_attempt.py
web/: barChart.js  eegChart.js  huffman.js  huffmanTreeConstant.js  index.html
